--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,15 +2,14 @@
 name: Docker Release
 
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types: [published, created, edited]
 
 jobs:
   docker-release:
     runs-on: ubuntu-latest
     env:
-      TAG: ${{ github.ref_name }}
+      TAG: ${{ github.event.release.tag_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
